# magmide

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.future.md  README.md  build.sh  clean.sh  dune-project  essay.md  fullbuild.sh  iris-notes.md  justfile  lab.ll  magmide.opam  notes.md  post.md  shell.nix  verified-software.md
.github/: FUNDING.yml
mg_examples/: main.mg
notes/: 2019-popl-iron-final.md  assembly-proofs.md  coq-metacoq.md  indexing-foundational-proof-carrying-code.md  indexing-indexed-model.md  indexing-modal-model.md  jung-thesis.md  known_types.md  tarjan.md
notes/tarjan/: extra_nocolors.v  tarjan_nocolors.v
old/: checker.rs  main.v
old_theory/: inductive_serde.v
papers/: 2019-popl-iron-final.md  coq-coq-correct.md  indexing-modal-model.md  iris-from-the-ground-up.md  iris-lecture-notes.md  pony-reference-capabilities.md
plugins/: dune  magmide.ml  magmide_constrexpr.ml  magmide_plugin_syntax.mlg  magmide_rust_bindings.ml
posts/: approachable-language-design.md  awful-user-experience-academic-research.md  comparisons-with-other-projects.md  coq-for-engineers.md  crossing-no-mans-land.md  design-of-magma.md  design-of-magmide.md  design-of-rok.md  intro-verification-logic-in-magma.md  intro-verification-logic-in-magmide.md  intro-verification-logic-in-rok.md  iris-in-plain-terms.md  toward-assembly-termination-vcgen.md  toward-termination-vcgen.md  what-is-magma.md  what-is-rok-and-why-is-it-important.md  what-is-rok.md
previous_theorems/: _CoqProject  main.v  utils.v
src/: ast.rs  bin.rs  checker.rs  dune  lib.rs  low_parser.rs  main.rs  old.md  parser.rs
tarjan/: README.md  _CoqProject
test_code/: something.mg
test_theory/: dune  test.v
theorems/: Maps.v  Result.v  Test.v  Utils.v  _CoqProject  dune  known_types.md  known_types.v  known_types_notes.v  machine.md  machine.v  main.md  main.v  utils.v
theory/: _CoqProject  bloop.ml  dune  list_assertions.v  main.v  playground.v  test.v  utils.v
