[package]
name = "magmide"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "magmide"
# path = "src/lib.rs"
# crate-type = ["staticlib", "cdylib"]

# [build]
# # https://doc.rust-lang.org/cargo/reference/config.html
# rustflags = ["-l", "LLVM-13", "-C", "link-args=-Wl,-undefined,dynamic_lookup"]

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "7"
# salsa = { version = "0.17.0-pre.2", package = "salsa-2022" }
salsa = { git = "https://github.com/salsa-rs/salsa.git", package = "salsa-2022", branch = "master" }
# anyhow = "1.0.57"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
# ocaml-interop = "0.8.8"
